--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@
     <body>
         <div id="all-contents">
             <nav>
-                <header>Patrick's Website</header>
+                <header>Sheba's Glorious Website</header>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="portfolio.html">Portfolio</a> </li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="studies.html">Studies</a></li>
                 </ul>
             </nav>
             
